<resources>

    <string name="app_name">My Emergency</string>
    <string name="title_activity_settings">Impostazioni</string>

    <!-- information screen -->
    <string name="information_name">Name</string>
    <string name="information_surname">Surname</string>

    <!-- tutorial -->
    <string name="title_tutorial1">Benvenuto in My Emergency App</string>
    <string name="title_tutorial2">Scopri la nostra app</string>
    <string name="text_tutorial">My Emergency ti permette di effettuare richieste di emergenza sanitaria in due click, senza dover chiamare il 112.\nPer essere efficace la nostra applicazione necessita di una connessione internet e del servizio di localizzazione attivo (gps).\n\nInserisci i dati delle persone che stanno intorno a te, crea la tua "rubrica" per essere pronto in caso di necessità.\nPer ognuno di essi scegli i numeri di telefono di riferimento da informare, via sms o whatsapp, della avvenuta richiesta di soccorso.\n(L\'invio di messaggi sms potrebbe richiedere spese aggiuntive in base al contratto con il tuo operatore.\nPer utilizzare al meglio whatsapp è richiesto di selezionare un contatto esistente in rubrica)\n\nIn caso di emergenza ti basterà premere sul nome della persona infortunata per attivare una richiesta di soccorso nel luogo in cui ti trovi,potrai inoltre segnalare alcuni sintomi che noti per facilitare i soccorritori.\n\nModifica i dati di ogni utente con un click lungo sulla sua icona.\n\nResta aggiornato sulle tue richieste grazie al nostro servizio di notifica.</string>
    <string name="description_image">Icona</string>
    <string name="button_skip">Salta tutorial</string>
    <string name="button_continue">Continua</string>
    

    <!-- add/edit screen -->
    <string name="hint_name">Nome</string>
    <string name="hint_surname">Cognome</string>
    <string name="hint_CF">Codice Fiscale</string>
    <string name="hint_data">Data di nascita</string>
    <string name="hint_telephone">Telefono</string>
    <string name="contatti_utili">Contatti utili:\nSe è abilitato l\'invio di messaggi inserisci il numero o clicca sul bottone Rubrica e scegli il numero della persona a cui vuoi mandare l\'avviso dell\'avvenuta richiesta di emergenza </string>
    <string name="rubrica">Rubrica</string>
    <string name="hint_contact1">Contatto 1</string>
    <string name="hint_contact2">Contatto 2</string>
    <string name="radioNone">Nessuno</string>
    <string name="radioMessage">Messaggi</string>
    <string name="radioWhatsapp">Whatsapp</string>

    <!-- menu items -->
    <string name="add_task">Add Information</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tutorial">Tutorial</string>

    <!-- problems activity -->
    <string name="titleTextView_text">Inserisci le informazioni per il soccorso</string>string>
    <string name="positionTextView_text">Posizione non disponibile</string>
    <string name="invia">Invia</string>

    <!-- event activity -->
    <string name="event_type">Tipo</string>
    <string name="event_name">Nome</string>
    <string name="event_time">Ora</string>

    <!-- preferences -->
    <string name="summary_tittle"></string>
    <string name="summary_text">Impostazioni per l\'inserimento dei dati delle persone che potrebbero richiedere soccorso.\r\nE\' possibile decidere se utilizzare sempre lo stesso numero di cellulare che sarà inserito nella prossima schermata ed è possibile selezionare la tipologia di messagistica da utilizzare per inviare messaggi di avviso in caso di emergenza(è selezionabile solo in questa schermata!)</string>
    <string name="remember_phone_number">Ricorda il numero di telefono</string>
    <string name="remember_phone_number_summary">Utilizza sempre lo stesso numero di telefono come contatto</string>
    <string name="messages">Scegli metodo di messaggistica</string>
    <string name="messages_summary">Cliccando qui è possibile scegliere il metodo di messagistica da utilizzare in caso di emergenza: utilizzando gli SMS è possibile inviare un messaggio a due contatti di riferimento, con whatsapp è possibile aprire l\'applicazione di messaggistica ed inviare un messaggio a un solo utente altrimenti è possibile scegliere di non inviare nulla, in ogni caso la tua richiesta sarà ricevuta ed elaborata da un nostro operatore. I messaggi inviati sono generati automaticamente dalla applicazione.</string>
    <string name="messages_title">Tipo di messaggi</string>
    <string-array name="messages_keys">
        <item>Nessuno</item>
        <item>SMS</item>
        <item>Whatsapp</item>
    </string-array>
    <string-array name="messages_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="messages_default">0</string>

    <string name="gps_network_not_enabled">Per un utilizzo efficente del servizio è necessario attivare la localizzazione</string>
    <string name="open_location_settings">Apri localizzazione</string>
    <string name="Cancel">Annulla</string>

    <string name="phone_image">immagine cellulare</string>

</resources>