<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:enabled="true"
        android:key="summary_key"
        android:selectable="false"
        android:summary="@string/summary_text"
        android:title="@string/summary_tittle" />
    <CheckBoxPreference
        android:key="pref_remember_phone_number"
        android:title="@string/remember_phone_number"
        android:summary="@string/remember_phone_number_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="pref_messages"
        android:title="@string/messages"
        android:summary="@string/messages_summary"
        android:dialogTitle="@string/messages_title"
        android:entries="@array/messages_keys"
        android:entryValues="@array/messages_values"
        android:defaultValue="@string/messages_default" />
</PreferenceScreen>