<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:text="@string/title_tutorial1"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="275dp"
            android:layout_height="275dp"
            android:contentDescription="@string/description_image"
            android:paddingBottom="25dp" />

        <Button
            android:id="@+id/buttonSkip"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/button_skip"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/roundedbutton"
            android:padding="10dp"
            android:text="@string/button_continue"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>